--- a/style/sass/components/_step.scss
+++ b/style/sass/components/_step.scss
@@ -12,6 +12,7 @@
     font-family: $font-text, sans-serif;
     background-color: $second-background-color ;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.314);
+    cursor: pointer;
 
     &:hover {
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.488);
