--- a/style/sass/base/_reset.scss
+++ b/style/sass/base/_reset.scss
@@ -8,7 +8,6 @@
 
 body {
     background-color: $background-color;
-    opacity: 1;
 }
 
 a {
@@ -17,8 +16,22 @@ a {
 }
 
 .content {
-    height: 0px;
+    // width: 100vw;
+    position: absolute;
+    animation: showcontent 200ms ease forwards 3.2s;
     transform: scale(0);
-    animation: showcontent 400ms ease forwards 3s;
+}
 
+@keyframes showcontent {
+    0% {
+        transform: translateY(200px);
+    }
+
+    100% {
+        transform: scale(1);
+        top: 0;
+        left: 0;
+        transform: translateY(0px);
+        width: 100%;
+    }
 }
