--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -1,4 +1,5 @@
 @import "./../base/variable";
+@import'../base/typography';
 
 .menu {
     position: relative;
@@ -24,7 +25,7 @@
     }
 
     &__restaurant-title {
-        font-size: 30px;
+        font-size: 15px;
         font-family: $font-title , sans-serif;
         font-weight: 500;
         display: flex;
