--- a/style/sass/components/_like.scss
+++ b/style/sass/components/_like.scss
@@ -4,10 +4,10 @@
 .like__container i {
     font-size: 27px;
     color: transparent;
-    -webkit-text-stroke: 2px rgb(0, 0, 0);
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
     background-clip: text;
     -webkit-background-clip: text;
-    background-image: linear-gradient(to bottom, $secondary-color, $primary-color);
+    background-image: linear-gradient(45deg, $secondary-color, $primary-color);
     background-repeat: no-repeat;
     cursor: pointer;
     background-position: 0 27px;
@@ -24,7 +24,10 @@
         background-position: 0 27px;
     }
 
+
+
     100% {
         background-position: 0 0;
+        -webkit-text-stroke: 0px transparent;
     }
 }
